@@ -17,6 +17,9 @@ $LANG = array(
 'L_DELETE_FOLDER'				   					=> 'Verzeichnis löschen',
 'L_DELETE_SUCCESSFUL'								=> 'Erfolgreiche Löschung',
 'L_DELETE_FILE_ERR'									=> 'Fehler beim Löschen der Datei',
+'L_RENAME_FILE_SUCCESSFUL'							=> 'Datei umbenannt erfolgreich',
+'L_RENAME_FILE_ERR'									=> 'Fehler beim Verarbeiten der Datei',
+'L_RENAME_FILE'										=> 'Datei umbenennen',
 'L_THUMBNAIL'										=> 'Vorschaubild (optional)',
 'L_THUMBNAIL_SELECTION'								=> 'Bild auswählen',
 'L_THUMBNAIL_TITLE'									=> 'Bildtitel (optional)',
