@@ -17,6 +17,9 @@ $LANG = array(
 'L_DELETE_FOLDER'				   							=> 'Delete folder',
 'L_DELETE_SUCCESSFUL'										=> 'Successfully deleted',
 'L_DELETE_FILE_ERR'											=> 'Error while deleting file',
+'L_RENAME_FILE_SUCCESSFUL'									=> 'Successfully renamed file',
+'L_RENAME_FILE_ERR'											=> 'Error while processing file',
+'L_RENAME_FILE'												=> 'Rename file',
 'L_THUMBNAIL'												=> 'Thumbnail (optional)',
 'L_THUMBNAIL_SELECTION'										=> 'Select image',
 'L_THUMBNAIL_TITLE'											=> 'Image Title (optional)',
