@@ -17,6 +17,9 @@ $LANG = array(
 'L_DELETE_FOLDER'				   	=> 'Escafar dorsièr',
 'L_DELETE_SUCCESSFUL'				=> 'Supression efectuada amb succès',
 'L_DELETE_FILE_ERR'					=> 'Error pendent la supression del fichièr',
+'L_RENAME_FILE_SUCCESSFUL'			=> 'Modificacion efectuada amb succès',
+'L_RENAME_FILE_ERR'					=> 'Error pendent lo tractament del fichièr',
+'L_RENAME_FILE'						=> 'Modificacion del fichièr',
 'L_THUMBNAIL'						=> 'Imatge a la una (facultatiu)',
 'L_THUMBNAIL_SELECTION'				=> 'Seleccionar un imatge',
 'L_THUMBNAIL_TITLE'					=> 'Títol de l\'imatge (facultatiu)',
