@@ -17,6 +17,9 @@ $LANG = array(
 'L_DELETE_FOLDER'				   							=> 'Ștergeți dosar',
 'L_DELETE_SUCCESSFUL'										=> 'Stergere de succes',
 'L_DELETE_FILE_ERR'											=> 'Eroare la ștergerea fișierului',
+'L_RENAME_FILE_SUCCESSFUL'									=> 'Fișierul a fost redenumit cu succes',
+'L_RENAME_FILE_ERR'											=> 'Eroare în timpul procesării fișierului',
+'L_RENAME_FILE'												=> 'Redenumește fisierul',
 'L_THUMBNAIL'												=> 'Miniatură (opţional)',
 'L_THUMBNAIL_SELECTION'										=> 'Selectați Image',
 'L_THUMBNAIL_TITLE'											=> 'Titlu imagine (opţional)',
